--- a/TP1_KATALON/settings/internal/com.kms.katalon.integration.analytics.properties
+++ b/TP1_KATALON/settings/internal/com.kms.katalon.integration.analytics.properties
@@ -5,3 +5,4 @@ analytics.project="{\\n  \\"id\\"\: 1392103,\\n  \\"name\\"\: \\"First Project\\
 analytics.testcloud.integration.enable=true
 analytics.testreport.autoupload.enable=true
 analytics.onpremise.enable=false
+analytics.manual.project="{\\n  \\"id\\"\: 1392103,\\n  \\"name\\"\: \\"First Project\\",\\n  \\"teamId\\"\: 1372425,\\n  \\"status\\"\: \\"ACTIVE\\",\\n  \\"team\\"\: {\\n    \\"id\\"\: 1372425,\\n    \\"name\\"\: \\"First Team\\",\\n    \\"organization\\"\: {\\n      \\"id\\"\: 1419426,\\n      \\"name\\"\: \\"My Organization_01\\",\\n      \\"quotaKSE\\"\: 0,\\n      \\"quotaUnlimitedKSE\\"\: 0,\\n      \\"accountId\\"\: 1270639,\\n      \\"samlSSO\\"\: false\\n    }\\n  },\\n  \\"isSampleProject\\"\: false,\\n  \\"canAutoIntegrate\\"\: false\\n}"
